# YRT

./: .gitignore  CMakeLists.txt  README.md  YRT.pro  calendar.cpp  calendar.h  calendar.ui  mainwindow.ui
Documents/: YRT.pptx  YRT_Documentation.docx  YRT_QA_documentation.xlsx  ~$T_Documentation.docx
forms/: addheir.ui  calendar.ui  calendarpopup.ui  crypto.ui  login.ui  mainmenu.ui  mainwindow.ui  register.ui  resetcredentials.ui  termsandconditions.ui
python/: main.py
resources/: YRT.pptx  resources.qrc
src/: AccManagement.cpp  AccManagement.hpp  AppleNotification.py  Application.cpp  Application.hpp  Fonts.cpp  Fonts.hpp  Renderer.cpp  Renderer.hpp  TransferFunds.py  WindowsNotification.py  addheir.cpp  addheir.h  addheir.hpp  calendar.cpp  calendar.h  calendar.hpp  calendarpopup.cpp  calendarpopup.h  calendarpopup.hpp  crypto.cpp  crypto.h  crypto.py  databasemanager.cpp  databasemanager.hpp  login.cpp  login.h  login.hpp  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  pch.hpp  register.cpp  register.h  register.hpp  resetcredentials.cpp  (+5 more)
